ec2/pihole/pihole-security-template.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Creates a PiHole EC2 Security Resources in AWS

Parameters:
  IngressCidrIp:
    Description: The CidrIp for the SecurityGroup Ingress
    Type: String
  IngressCidrIpv6:
    Description: The CidrIpv6 for the SecurityGroup Ingress
    Type: String

Resources:
  # IAM Role
  PiHoleIAMRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Description: 'The IAM Role for the PiHole EC2 Instance'
      MaxSessionDuration: 43200
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/CloudWatchAgentServerPolicy
        - arn:aws:iam::aws:policy/AmazonEC2FullAccess
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
        - arn:aws:iam::aws:policy/IAMReadOnlyAccess
      Policies:
        - PolicyName: PiHoleIAMRoleS3Policy
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - 's3:GetObject'
                  - 's3:PutObject'
                Resource:
                  - 'arn:aws:s3:::*'
        - PolicyName: PiHoleIAMRoleLogPolicy
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - 'logs:PutRetentionPolicy'
                Resource:
                  - '*'
      RoleName: 'PiHoleIAMRole'
      Tags:
        - Key: Name
          Value: !Join [ '-', [ Ref: AWS::StackName, Ref: AWS::Region, 'PiHole', 'IAMRole' ]]

  # Security Group
  PiHoleEC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: PiHole EC2 Security Group
      GroupName: PiHoleEC2SecurityGroup
      SecurityGroupIngress:
        - CidrIp: !Ref IngressCidrIp
          Description: Allow inbound ICMP (ping)
          IpProtocol: icmp
          FromPort: -1
          ToPort: -1
        - CidrIpv6: !Ref IngressCidrIpv6
          Description: Allow inbound ICMPv6 (ping)
          IpProtocol: icmpv6
          FromPort: -1
          ToPort: -1
        - CidrIp: !Ref IngressCidrIp
          Description: Allow inbound ipv4 traffic for SSH TCP on port 22
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
        - CidrIpv6: !Ref IngressCidrIpv6
          Description: Allow inbound ipv6 traffic for SSH TCP on port 22
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
        - CidrIp: !Ref IngressCidrIp
          Description: Allow inbound ipv4 traffic for OpenVPN UDP on port 1194
          IpProtocol: udp
          FromPort: 1194
          ToPort: 1194
        - CidrIpv6: !Ref IngressCidrIpv6
          Description: Allow inbound ipv6 traffic for OpenVPN UDP on port 1194
          IpProtocol: udp
          FromPort: 1194
          ToPort: 1194
        - CidrIp: !Ref IngressCidrIp
          Description: Allow inbound ipv4 traffic for pihole-FTL DNS TCP on port 53
          IpProtocol: tcp
          FromPort: 53
          ToPort: 53
        - CidrIpv6: !Ref IngressCidrIpv6
          Description: Allow inbound ipv6 traffic for pihole-FTL DNS TCP on port 53
          IpProtocol: tcp
          FromPort: 53
          ToPort: 53
        - CidrIp: !Ref IngressCidrIp
          Description: Allow inbound ipv4 traffic for pihole-FTL DNS UDP on port 53
          IpProtocol: udp
          FromPort: 53
          ToPort: 53
        - CidrIpv6: !Ref IngressCidrIpv6
          Description: Allow inbound ipv6 traffic for pihole-FTL DNS UDP on port 53
          IpProtocol: udp
          FromPort: 53
          ToPort: 53
        - CidrIp: !Ref IngressCidrIp
          Description: Allow inbound traffic for pihole-FTL DHCP IPv4 UDP on port 67
          IpProtocol: udp
          FromPort: 67
          ToPort: 67
        - CidrIpv6: !Ref IngressCidrIpv6
          Description: Allow inbound traffic for pihole-FTL DHCPv6 UDP on port 547
          IpProtocol: udp
          FromPort: 547
          ToPort: 547
        - CidrIp: 0.0.0.0/0
          Description: Allow inbound ipv4 traffic for lighttpd HTTP TCP on port 80
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
        - CidrIpv6: ::0/0
          Description: Allow inbound ipv6 traffic for lighttpd HTTP TCP on port 80
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
        - CidrIp: !Ref IngressCidrIp
          Description: Allow inbound ipv4 traffic for lighttpd HTTPS TCP on port 443
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443
        - CidrIpv6: !Ref IngressCidrIpv6
          Description: Allow inbound ipv6 traffic for lighttpd HTTPS TCP on port 443
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443
        - CidrIp: !Ref IngressCidrIp
          Description: Allow inbound ipv4 traffic for pihole-FTL TCP on port 4711
          IpProtocol: tcp
          FromPort: 4711
          ToPort: 4711
        - CidrIpv6: !Ref IngressCidrIpv6
          Description: Allow inbound ipv6 traffic for pihole-FTL TCP on port 4711
          IpProtocol: tcp
          FromPort: 4711
          ToPort: 4711
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all ipv4 outbound traffic by default
          IpProtocol: -1
        - CidrIpv6: ::/0
          Description: Allow all ipv6 outbound traffic by default
          IpProtocol: -1
      Tags:
        - Key: Name
          Value: !Join [ '-', [ Ref: AWS::StackName, Ref: AWS::Region, 'PiHole', 'SecurityGroup' ]]
      VpcId:
        Fn::ImportValue: !Join [ '-', [ 'general-vpc-stack', Ref: AWS::Region, 'EC2-VPC-GeneralVpc-VpcId' ]]

  # IAM Instance Profile
  PiHoleIAMInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      InstanceProfileName: PiHoleIAMInstanceProfile
      Roles:
        - !Ref PiHoleIAMRole

Outputs:
  PiHoleIAMRoleRef:
    Value: !Ref PiHoleIAMRole
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-IAM-Role-PiHoleIAMRole-Ref'
  PiHoleIAMRoleArn:
    Value: !GetAtt PiHoleIAMRole.Arn
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-IAM-Role-PiHoleIAMRole-Arn'
  PiHoleIAMRoleId:
    Value: !GetAtt PiHoleIAMRole.RoleId
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-IAM-Role-PiHoleIAMRole-Id'
  PiHoleEC2SecurityGroupRef:
    Value: !Ref PiHoleEC2SecurityGroup
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-SecurityGroup-PiHoleEC2SecurityGroup-Ref'
  PiHoleEC2SecurityGroupId:
    Value: !GetAtt PiHoleEC2SecurityGroup.GroupId
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-SecurityGroup-PiHoleEC2SecurityGroup-Id'
  PiHoleEC2SecurityGroupVpcId:
    Value: !GetAtt PiHoleEC2SecurityGroup.VpcId
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-SecurityGroup-PiHoleEC2SecurityGroup-VpcId'
  PiHoleIAMInstanceProfileRef:
    Value: !Ref PiHoleIAMInstanceProfile
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-IAM-InstanceProfile-PiHoleIAMInstanceProfile-Ref'
  PiHoleIAMInstanceProfileArn:
    Value: !GetAtt PiHoleIAMInstanceProfile.Arn
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-IAM-InstanceProfile-PiHoleIAMInstanceProfile-Arn'
